--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,33 @@
 ---
+
+
+import '../styles/index.css';
+import BaseHead from '../components/head/BaseHead.astro';
+import { nav } from '../config/nav.js';
+import Header from '../components/head/Header.astro';
+import Logo from '../components/Logo.astro';
 interface Props {
 	title: string;
+	meta_description: string;
+	body_class: string;
 }
-
-const { title } = Astro.props;
+const { title, meta_description, body_class } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<BaseHead title={title} description={meta_description} />
 	</head>
-	<body>
+	
+	<body class={body_class}>
+		<Header rightMenu navData={nav} id="navID" slot="header">
+			<span slot="logo">
+				<Logo />
+			</span>
+		</Header>
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
+
+
