--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -6,8 +6,8 @@
 					Full-Stack Developer
 
 					<a
-						href="#"
-						target="_blank"
+						href="//t2delastro/"
+						
 						rel="noreferrer">T2del</a
 					> 
 					Trying to do better one day at a time.
@@ -21,7 +21,7 @@
 		<div class="hero-section__image">
 				<picture>
 					<img
-						src="/assets/images/home/banner.jpg"
+						src="/t2delastro/assets/images/home/banner.jpg"
 						alt="T2del"
 						id="home-hero-image"
 					/>
