--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
 		<div class="hero-section__text">
 			<h1>404</h1>
 			<h2>Page Not Found 👀</h2>
-			<a href="/">Home</a>
+			<a href="/t2delastro/">Home</a>
 		</div>
 		
 	</section>
