--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -1,32 +1,33 @@
 
 	<section class="hero-section__section">
+		<div class="hero-section__image notshow blur">
+			<picture>
+				<img
+					src="/t2delastro/assets/images/home/banner.jpg"
+					alt="T2del"
+					id="home-hero-image"
+				/>
+			</picture>
+		</div>
 		<div class="hero-section__text">
-				<h1>I am Dennis Macapagal</h1>
-				<p>
+				<h1 class="notshow blur">I am Dennis Macapagal</h1>
+				<p class="notshow blur">
 					Full-Stack Developer
 
 					<a
 						href="//t2delastro/"
 						
-						rel="noreferrer">T2del</a
+						rel="noreferrer" class="notshow blur">T2del</a
 					> 
 					Trying to do better one day at a time.
 				</p>
-				<div class="hero-btns__container">
+				<div class="hero-btns__container notshow">
 					
 					
 				</div>
         
 		</div>
-		<div class="hero-section__image">
-				<picture>
-					<img
-						src="/t2delastro/assets/images/home/banner.jpg"
-						alt="T2del"
-						id="home-hero-image"
-					/>
-				</picture>
-		</div>
+		
 	</section>
 
 
