--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -2,6 +2,7 @@
 import { Icon } from 'astro-icon'
 const { navData, rightMenu } = Astro.props;
 
+import Container from '../../components/Container.astro';
 ---
 
 <script type="module">
@@ -30,10 +31,21 @@ const { navData, rightMenu } = Astro.props;
 			scrollingElement.classList.remove("white-bg");; // Default background
 		}
 	});
+  const obeserver = new IntersectionObserver((entries) => {
+		entries.forEach((entry) => {
+			if(entry.isIntersecting) {
+				entry.target.classList.add('show');
+			} else {
+				entry.target.classList.remove('show');
+			}
+		});
+	});
+	const hiddenElements = document.querySelectorAll('.notshow');
+	hiddenElements.forEach((el) => obeserver.observe(el))
 </script>  
 
 <header id="t2delHeader" class={`${rightMenu ? "header--right" : ``.trim()}`}>
-  
+  <Container className="custom-class">
   <div class="header-logo-menu__container">
   <button id="menuButton" title="Open Main Menu">
     <span id="menuButtonIconHam">
@@ -65,7 +77,7 @@ const { navData, rightMenu } = Astro.props;
     <slot name="action-item">
     </slot>
   </div>
-  
+</Container>
 </header>
 
 <style>
