--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,12 +3,14 @@ interface Props {
 	title: string;
 	body: string;
 	href: string;
+	classname: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, classname } = Astro.props;
 ---
 
-<li class="link-card">
+
+<li class={`link-card ${classname}`}>	
 	<a href={href}>
 		<h2>
 			{title}
