--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -45,7 +45,7 @@ import Container from '../../components/Container.astro';
 </script>  
 
 <header id="t2delHeader" class={`${rightMenu ? "header--right" : ``.trim()}`}>
-  <Container className="custom-class">
+  <Container className="container-header">
   <div class="header-logo-menu__container">
   <button id="menuButton" title="Open Main Menu">
     <span id="menuButtonIconHam">
