--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,31 +16,35 @@ const posts = (await getCollection('blog')).sort(
 	<HomeHeroSection />
 		<section>
 			<Container className="custom-class">
-			<h2>Welcome to <span class="text-gradient">T2del</span></h2>
+			<h2 class="notshow">Welcome to <span class="text-gradient">T2del</span></h2>
 			<p class="instructions">
 				To get started, open the directory <code>src/pages</code> in your project.<br />
 				<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 			</p>
-			<ul role="list" class="link-card-grid">
+			<ul role="list" class="link-card-grid notshow blur">
 				<Card
 					href="https://docs.astro.build/"
 					title="Documentation"
 					body="Learn how Astro works and explore the official API docs."
+				
 				/>
 				<Card
 					href="https://astro.build/integrations/"
 					title="Integrations"
 					body="Supercharge your project with new frameworks and libraries."
+				
 				/>
 				<Card
 					href="https://astro.build/themes/"
 					title="Themes"
 					body="Explore a galaxy of community-built starter themes."
+					
 				/>
 				<Card
 					href="https://astro.build/chat/"
 					title="Community"
 					body="Come say hi to our amazing Discord community. ❤️"
+				
 				/>
 			</ul>
 			</Container>
