minor animation transition, added more transition

--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -10,8 +10,8 @@
 			</picture>
 		</div>
 		<div class="hero-section__text">
-				<h1 class="notshow blur">I am Dennis Macapagal</h1>
-				<p class="notshow blur">
+				<h1 class="notshow blur fromtop">I am Dennis Macapagal</h1>
+				<p class="notshow blur fromtop">
 					Full-Stack Developer
 
 					<a
