--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,9 @@ const { title, meta_description, body_class } = Astro.props;
 			</span>
 		</Header>
 		<slot />
+		<footer>
+			Copyright © 2023
+		</footer>
 	</body>
 </html>
 
