home link on the header, homeherosection

--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -15,7 +15,7 @@
 					Full-Stack Developer
 
 					<a
-						href="//t2delastro/"
+						href="/t2delastro/"
 						
 						rel="noreferrer" class="notshow blur">T2del</a
 					> 
