--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -57,7 +57,7 @@ import Container from '../../components/Container.astro';
       <div class="baseline-close"></div>
     </span>
   </button>
-  <a class="header-logo__link" href="/">
+  <a class="header-logo__link" href="/t2delastro/">
     <slot name="logo">
     </slot>
   </a>
@@ -79,97 +79,3 @@ import Container from '../../components/Container.astro';
   </div>
 </Container>
 </header>
-
-<style>
-  header {
-    width: 100%;
-    padding: 1rem 0.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  header.header--right {
-    display: grid;
-    grid-template-columns: 1fr auto auto;
-  }
-  .header-logo__link {
-    width: fit-content;
-    color: inherit;
-    text-decoration: none;
-  }
-  .header-logo-menu__container {
-    display: flex;
-    align-items: center;
-    z-index: 100;
-    justify-content: space-between;
-  }
-  .header-action-item__container {
-    z-index: 100;
-  }
-  #menuButton {
-    outline: none;
-    border: none;
-    background-color: transparent;
-    margin-right: 0.5rem;
-    display: none;
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
-  }
-  #menuButton > span {
-    color: var(--theme-on-bg);
-    vertical-align: middle;
-  }
-  nav {
-  display: flex;
-  }
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-  }
-  nav ul li a {
-    text-decoration: none;
-    margin-right: 1rem;
-    color: inherit;
-    opacity: 0.72;
-    transition: opacity linear 150ms;
-  }
-  nav ul li a:hover {
-    opacity: 1;
-  }
-  @media(max-width: 991px) {
-    #menuButton {
-      display: block;  
-      z-index: 100;
-    }
-    .header-nav__container {
-      width: 100%;
-      height: 0;
-      background-color: var(--theme-bg);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-      transition: all 300ms ease-in;
-      opacity: 0;
-    }
-    header[mobile-menu-open] .header-nav__container {
-      display: flex;
-      height: 100%;
-      z-index: 99;
-      opacity: 1;
-    }
-    header[mobile-menu-open] nav ul {
-      align-items: center;
-      flex-direction: column;
-    }
-     header[mobile-menu-open] nav ul li {
-       font-size: var(--font-size-lg);
-       margin-bottom: 1rem;
-     }
-  }
-</style>
