overlay in homeherosection

--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -26,8 +26,7 @@
 					
 				</div>
         
-		</div>
-		
+		</div>		
 	</section>
 
 
@@ -35,6 +34,16 @@
 	.hero-section__section {
 		position: relative;
     	height: 100vh;
+	}
+	section.hero-section__section:after {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(0, 0, 0, 0.55);
+		content: "";
+		z-index: 1;
 	}
 	.hero-section__text {
 		justify-self: center;
@@ -44,6 +53,10 @@
 		left: 50%;
 		top: 50%;
 		transform: translate(-50%, -50%);
+		z-index: 2;
+	}
+	.hero-section__text h1, .hero-section__text p {
+		color: #fff;
 	}
 	.hero-btns__container {
 		display: flex;
