--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,25 +23,25 @@ const posts = (await getCollection('blog')).sort(
 			</p>
 			<ul role="list" class="link-card-grid notshow blur">
 				<Card
-					href="https://docs.astro.build/"
+					href="#"
 					title="Documentation"
 					body="Learn how Astro works and explore the official API docs."
 				
 				/>
 				<Card
-					href="https://astro.build/integrations/"
+					href="#"
 					title="Integrations"
 					body="Supercharge your project with new frameworks and libraries."
 				
 				/>
 				<Card
-					href="https://astro.build/themes/"
+					href="#"
 					title="Themes"
 					body="Explore a galaxy of community-built starter themes."
 					
 				/>
 				<Card
-					href="https://astro.build/chat/"
+					href="#"
 					title="Community"
 					body="Come say hi to our amazing Discord community. ❤️"
 				
@@ -51,12 +51,12 @@ const posts = (await getCollection('blog')).sort(
 		</section>
 		<section>
 			<Container className="custom-class">
-				<ul>
+				<ul role="list" class="link-card-grid">
 					{
 						posts.map((post) => (
 							<li class="notshow fromtop">
 								<a href={`/t2delastro/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
+									<img  src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
