added icons on hero section

--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -10,22 +10,20 @@
 			</picture>
 		</div>
 		<div class="hero-section__text">
-				<h1 class="notshow blur fromtop">I am Dennis Macapagal</h1>
-				<p class="notshow blur fromtop">
-					Full-Stack Developer
+			<h1 class="notshow blur fromtop">I am <span>Dennis Macapagal</span></h1>
+			<p class="notshow blur fromtop">Full-Stack Developer</p>
+			<p class="notshow blur fromtop">Trying to do better one day at a time.</p>
+			<p class="notshow blur fromtop"><a href="tel: 88140252">88140252</a> </p>
+			<p class="notshow blur fromtop"><a href="mailto: macapagal.dennis@gmail.com">macapagal.dennis@gmail.com</a></p>
 
-					<a
-						href="/t2delastro/"
-						
-						rel="noreferrer" class="notshow blur">T2del</a
-					> 
-					Trying to do better one day at a time.
-				</p>
-				<div class="hero-btns__container notshow">
-					
-					
-				</div>
-        
+			<ul class="social-links">
+				<li class="facebook"><a target="_blank" href="https://www.facebook.com/t2del/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li class="twitter"><a target="_blank" href="https://twitter.com/t2del"><i class="fa fa-twitter"></i></a></li>
+				<li class="skype hide"><a target="_blank" href="https://join.skype.com/invite/YVtbBwzGoXFE?fbclid=IwAR34rAK1GzC4k-4VccUKOiBuIyjRzjm0HHz2zzlEKrbA6ruG2jkLA6c9g5Y"><i class="fa fa-skype"></i></a></li>
+				<li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/dennismacapagal/"><i class="fa fa-linkedin"></i></a></li>
+				<li class="whatsapp"><a target="_blank" href="https://wa.me/88140252"><i class="fa fa-whatsapp"></i></a></li>
+				<li class="resume"><a target="_blank" href="https://docs.google.com/document/d/1A8VE6jIIv6r9vaGmvHT9hDhajwXAsImz/edit?usp=share_link&amp;ouid=116872466953417214421&amp;rtpof=true&amp;sd=true" title="Resume"><i class="fa fa-download"></i></a></li>
+			</ul>
 		</div>		
 	</section>
 
