--- a/src/components/head/BaseHead.astro
+++ b/src/components/head/BaseHead.astro
@@ -1,6 +1,8 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
+import 'font-awesome/css/font-awesome.min.css';
+
 
 interface Props {
 	title: string;
@@ -44,3 +46,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- paste GA4 Tracking here -->
+
+<!-- paste GA4 Tracking here -->
