--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,9 @@ body {
 	position: relative;
 	transition: all 300ms;
 }
+a {
+	text-decoration: none;
+}
 
 pre {
   padding: 1em;
@@ -23,6 +26,9 @@ pre .language-id {
 
 time {
 	font-size: .6rem;
+}
+span {
+	color: #339BEB;
 }
 
 header {
@@ -71,4 +77,52 @@ footer {
     border-top: 1px solid #f3f3f3;
     border-bottom: 1px solid #f3f3f3;
     padding: 40px 0;
+}
+
+/* Social Links
+---------------------------------- */
+.social-links {
+	padding: 0;
+	list-style: none;
+	margin: 15px 0;
+}
+.social-links li {
+	margin: 10px 25px 10px 0;
+	display: inline-block;
+	font-size: 40px;
+}
+.social-links li a {
+	color: #d5d4d4;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+.social-links li.twitter a:hover {
+	color: #55acee;
+}
+.social-links li.skype a:hover {
+	color: #00aff0;
+}
+.social-links li.linkedin a:hover {
+	color: #0976b4;
+}
+.social-links li.googleplus a:hover {
+	color: #dd4b39;
+}
+.social-links li.youtube a:hover {
+	color: #b31217;
+}
+.social-links li.flickr a:hover {
+	color: #ff0084;
+}
+.social-links li.facebook a:hover {
+	color: #3b5998;
+}
+.social-links li.pinterest a:hover {
+	color: #cb2027;
+}
+.social-links li.whatsapp a:hover {
+	color: #25d366;
 }
