--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -16,7 +16,9 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
+<Layout title={`${post.data.title} | t2del` } meta_description={`${post.data.description}` } body_class="blog inner index something you wish to add for any use">
+	<BlogPost {...post.data}>
+		<Content />
+	</BlogPost>
+</Layout>
 
-<BlogPost {...post.data}>
-	<Content />
-</BlogPost>
