--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const posts_project = (await getCollection('project')).sort(
 						posts_blog.map((post) => (
 							<li class="notshow fromtop">
 								<a href={`/t2delastro/blog/${post.slug}/`}>
-									<img  src={post.data.heroImage} alt="" />
+									<img  src={post.data.heroImage} alt={post.data.imgalt} loading="lazy" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
@@ -76,7 +76,7 @@ const posts_project = (await getCollection('project')).sort(
 						posts_project.map((post) => (
 							<li class="notshow fromtop">
 								<a href={`/t2delastro/project/${post.slug}/`}>
-									<img  src={post.data.heroImage} alt="" />
+									<img  src={post.data.heroImage} alt={post.data.imgalt} loading="lazy" />
 									<h4 class="title">{post.data.title}</h4>
 								</a>
 							</li>
