completed the list of projects

--- a/src/components/head/Footer.astro
+++ b/src/components/head/Footer.astro
@@ -1,3 +1,9 @@
+---
+import Container from '../../components/Container.astro';
+---
 <footer>
-    Copyright © 2023
+    <Container className="container-footer">
+        Copyright © 2023
+    </Container>
+    
 </footer>
