--- a/src/components/sections/heros/HomeHeroSection.astro
+++ b/src/components/sections/heros/HomeHeroSection.astro
@@ -17,12 +17,12 @@
 			<p class="notshow blur fromtop"><a href="mailto: macapagal.dennis@gmail.com">macapagal.dennis@gmail.com</a></p>
 
 			<ul class="social-links">
-				<li class="facebook"><a target="_blank" href="https://www.facebook.com/t2del/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-				<li class="twitter"><a target="_blank" href="https://twitter.com/t2del"><i class="fa fa-twitter"></i></a></li>
-				<li class="skype hide"><a target="_blank" href="https://join.skype.com/invite/YVtbBwzGoXFE?fbclid=IwAR34rAK1GzC4k-4VccUKOiBuIyjRzjm0HHz2zzlEKrbA6ruG2jkLA6c9g5Y"><i class="fa fa-skype"></i></a></li>
-				<li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/dennismacapagal/"><i class="fa fa-linkedin"></i></a></li>
-				<li class="whatsapp"><a target="_blank" href="https://wa.me/88140252"><i class="fa fa-whatsapp"></i></a></li>
-				<li class="resume"><a target="_blank" href="https://docs.google.com/document/d/1A8VE6jIIv6r9vaGmvHT9hDhajwXAsImz/edit?usp=share_link&amp;ouid=116872466953417214421&amp;rtpof=true&amp;sd=true" title="Resume"><i class="fa fa-download"></i></a></li>
+				<li class="facebook"><a href="https://www.facebook.com/t2del/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+				<li class="twitter"><a href="https://twitter.com/t2del"><i class="fa fa-twitter"></i></a></li>
+				<li class="skype hide"><a href="https://join.skype.com/invite/YVtbBwzGoXFE?fbclid=IwAR34rAK1GzC4k-4VccUKOiBuIyjRzjm0HHz2zzlEKrbA6ruG2jkLA6c9g5Y"><i class="fa fa-skype"></i></a></li>
+				<li class="linkedin"><a href="https://www.linkedin.com/in/dennismacapagal/"><i class="fa fa-linkedin"></i></a></li>
+				<li class="whatsapp"><a href="https://wa.me/88140252"><i class="fa fa-whatsapp"></i></a></li>
+				<li class="resume"><a href="https://docs.google.com/document/d/1A8VE6jIIv6r9vaGmvHT9hDhajwXAsImz/edit?usp=share_link&amp;ouid=116872466953417214421&amp;rtpof=true&amp;sd=true" title="Resume"><i class="fa fa-download"></i></a></li>
 			</ul>
 		</div>		
 	</section>
