--- a/src/layouts/ProjectPost.astro
+++ b/src/layouts/ProjectPost.astro
@@ -9,12 +9,8 @@ import FormattedDate from '../components/FormattedDate.astro';
 import Container from '../components/Container.astro';
 
 
-interface Props {
-	body_class: string;
-}
-
 type Props = CollectionEntry<'project'>['data'];
-const { title, description, pubDate, updatedDate, heroImage, body_class, imgalt } = Astro.props;
+const { title, pubDate, updatedDate, heroImage,  imgalt } = Astro.props;
 
 ---
 <article>
