--- a/src/pages/project/[...slug].astro
+++ b/src/pages/project/[...slug].astro
@@ -1,7 +1,9 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import { type CollectionEntry, getCollection } from 'astro:content';
-import ProjectPost from '../../layouts/ProjectPost.astro';
+
+import FormattedDate from '../../components/FormattedDate.astro';
+import Container from '../../components/Container.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('project');
@@ -17,7 +19,24 @@ const { Content } = await post.render();
 ---
 
 <Layout title={`${post.data.title} | t2del` } meta_description={`${post.data.description}` } body_class="project inner index something you wish to add for any use">
-	<ProjectPost {...post.data}>
-		<Content />
-	</ProjectPost>
+	<article>
+		<div class="hero-image notshow blur">
+			{post.data.heroImage && <img width={1920} height={750} src={post.data.heroImage} alt={post.data.imgalt} />}
+		</div>
+		<Container className="custom-class">
+			<div class="prose">
+				<div class="title">
+					<div class="date"><FormattedDate date={post.data.pubDate} /></div>
+					<h1>{post.data.title}</h1>
+					<hr />
+				</div>
+				<div class="description">
+					<div>Role: <span>{post.data.role}</span></div>
+					<div>Platform: <span>{post.data.platform}</span></div>
+					<a href={post.data.siteUrl} rel="noopener noreferrer"><span>Visit Site</span></a>
+				</div>
+				<Content />
+			</div>
+		</Container>
+	</article>
 </Layout>
