--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,9 @@ body {
 	position: relative;
 	transition: all 300ms;
 }
+body:where(.blog, .project) {
+	margin-top: 90px;
+}
 a {
 	text-decoration: none;
 }
