--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,9 @@ const posts_blog = (await getCollection('blog')).sort(
 	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 
-const posts_project = (await getCollection('project')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
-);
+const posts_project = (await getCollection('project'))
+  //.filter(post => post.data.status == 'active') // Filter out active posts
+  .sort((a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf());
 ---
 
 
@@ -55,7 +55,7 @@ const posts_project = (await getCollection('project')).sort(
 						posts_blog.map((post) => (
 							<li class="notshow fromtop">
 								<a href={`/t2delastro/blog/${post.slug}/`}>
-									<img  src={post.data.heroImage} alt={post.data.imgalt} loading="lazy" />
+									<img  src={post.data.heroImage} alt={post.data.imgalt} title={post.data.imgalt} />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
@@ -76,7 +76,7 @@ const posts_project = (await getCollection('project')).sort(
 						posts_project.map((post) => (
 							<li class="notshow fromtop">
 								<a href={`/t2delastro/project/${post.slug}/`}>
-									<img  src={post.data.heroImage} alt={post.data.imgalt} loading="lazy" />
+									<img  src={post.data.heroImage} alt={post.data.title}  title={post.data.title} />
 									<h4 class="title">{post.data.title}</h4>
 								</a>
 							</li>
