--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,11 +2,16 @@
 
 
 import '../styles/index.css';
+
 import BaseHead from '../components/head/BaseHead.astro';
 import { nav } from '../config/nav.js';
 import Header from '../components/head/Header.astro';
 import Footer from '../components/head/Footer.astro';
 import Logo from '../components/Logo.astro';
+
+
+// import 'bootstrap/dist/css/bootstrap.min.css';
+
 
 interface Props {
 	title: string;
